Fixed an issue with the filter dialog (missing margins; wrong whitespace).

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Default.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Default.css
@@ -744,8 +744,8 @@ iframe.TextOption.Customer {
 }
 
 #ArticleFilterDialogForm {
-    width: 450px;
-    height: 300px;
+    width: 480px;
+    max-height: 300px;
 }
 
 #ContextSettingsDialog {
